influxdb-deploy/02_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  influxdb
  labels:
    app: influxdb
