influxdb-deploy/02_service.yml
kind: Service
apiVersion: v1
metadata:
  name: influxdb-http-svc
  namespace: influxdb
spec:
  ports:
    - name: http-svc
      protocol: TCP
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
